--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -113,6 +113,9 @@ jobs:
           git fetch --no-tags --prune --depth=1 origin
           git checkout ${{ inputs.branch_name }}-${{ inputs.solution_name }}
           git pull origin develop --allow-unrelated-histories --strategy-option ours
+          git commit -m "Merge with develop branch"
+          git push
+
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -122,10 +125,9 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: merge pull request
-        run: |
-          output=$(gh pr list --head ${{ inputs.branch_name }}-${{ inputs.solution_name }})  
-          gh pr checkout $(output) && git fetch origin develop && git merge origin/develop
+      - name: merge pull requests
+        run: |          
+          gh pr merge --admin --merge ${{ inputs.branch_name }}-${{ inputs.solution_name }}
         env:
             GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
             
