--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml
@@ -33,6 +33,16 @@ jobs:
     env:
       RUNNER_DEBUG: 1
     steps:
+
+    - name: git config to accept long paths
+      run: |
+        git config user.name "GitHub Actions Bot"
+        git config user.email "<>"
+        git config --system core.longpaths true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
     - uses: actions/checkout@v3
       with:
         lfs: true
@@ -61,6 +71,16 @@ jobs:
     env:
       RUNNER_DEBUG: 1
     steps:
+    
+    - name: git config to accept long paths
+      run: |
+        git config user.name "GitHub Actions Bot"
+        git config user.email "<>"
+        git config --system core.longpaths true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
     - uses: actions/checkout@v3
       with:
         lfs: true      
