--- a/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_prod_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_prod_env.yml
@@ -1,4 +1,4 @@
-name: eql_cmx_portal_cicd_release_pipeline_to_prod_environment
+name: eql_cmx_portal_cicd_release_pipeline_to_prod_env.yml
 # prepare for releasing to prod:
 
 on:
