--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -48,7 +48,7 @@ jobs:
       build_secrets_id: ${{ secrets.build_secrets_id }}
       tenant_id: ${{ secrets.tenant_id }}
   
-  download-upload-portal-data-build-env:
+  portal-data-to-build-env:
     needs: [ release-to-build-env ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_build_env.yml@main
     secrets:
@@ -76,7 +76,7 @@ jobs:
       sit_secrets_id: ${{ secrets.sit_secrets_id }}
       tenant_id: ${{ secrets.tenant_id }}
     
-  download-upload-portal-data-sit-env:
+  portal-data-to-sit-env:
       needs: [ release-to-sit-env ]
       uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_sit_env.yml@main
       secrets:
@@ -120,7 +120,7 @@ jobs:
         uat_secrets_id: ${{ secrets.uat_secrets_id }}
         tenant_id: ${{ secrets.tenant_id }}
         
-  upload-portal-data-uat-env:
+  portal-data-to-uat-env:
       needs: [ release-to-uat-env ]
       uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_uat_env.yml@main
       secrets:
@@ -145,7 +145,7 @@ jobs:
         prod_secrets_id: ${{ secrets.prod_secrets_id }}
         tenant_id: ${{ secrets.tenant_id }}
 
-  upload-portal-data-prod-env:
+  portal-data-to-prod-env:
       needs: [ release-to-prod-env ]
       uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_prod_env.yml@main
       secrets:
