--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        target: [EQL20Customizing]
+        target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml@main
     with:      
       solution_name: ${{ matrix.target }}
@@ -32,7 +32,7 @@ jobs:
     strategy:
         max-parallel: 1
         matrix:
-          target: [EQL20Customizing]
+          target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
     needs: [ build ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml@main
     with:
@@ -64,7 +64,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        target: [EQL20Customizing]
+        target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
     needs: [ release-to-build-env ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_sit_env.yml@main
     with:
@@ -92,7 +92,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        target: [EQL20Customizing]
+        target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
     needs: [ release-to-build-env ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_data_migration_env.yml@main
     with:
@@ -108,7 +108,7 @@ jobs:
       strategy:
         max-parallel: 1
         matrix:
-          target: [EQL20Customizing]
+          target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
       needs: [ release-to-sit-env ]
       uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_uat_env.yml@main
       with:
@@ -133,7 +133,7 @@ jobs:
       strategy:
         max-parallel: 1
         matrix:
-          target: [EQL20Customizing]
+          target: [EQL10WebResources, EQL20Customizing, EQL30Plugins, EQL40Workflows, EQL50Flows, EQL60Templates]
       needs: [ release-to-uat-env ]
       uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_prod_env.yml@main
       with:
