--- a/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
@@ -65,106 +65,106 @@ jobs:
         with:
           lfs: true
 
-      - name: export solution from dev
-        uses: microsoft/powerplatform-actions/export-solution@v0
-        with:
-          environment-url: ${{ secrets.dev_url }}
-          app-id: ${{ secrets.dev_client_id }}
-          client-secret: ${{ secrets.dev_secrets_id }}
-          tenant-id: ${{ secrets.tenant_id }}  
-          solution-name: ${{ inputs.solution_name }}
-          solution-output-file: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
+      # - name: export solution from dev
+      #   uses: microsoft/powerplatform-actions/export-solution@v0
+      #   with:
+      #     environment-url: ${{ secrets.dev_url }}
+      #     app-id: ${{ secrets.dev_client_id }}
+      #     client-secret: ${{ secrets.dev_secrets_id }}
+      #     tenant-id: ${{ secrets.tenant_id }}  
+      #     solution-name: ${{ inputs.solution_name }}
+      #     solution-output-file: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
           
-      - name: check solution
-        uses: microsoft/powerplatform-actions/check-solution@v0
-        with:
-          environment-url: ${{ secrets.dev_url }}
-          app-id: ${{ secrets.dev_client_id }}
-          client-secret: ${{ secrets.dev_secrets_id }}
-          tenant-id: ${{ secrets.tenant_id }}
-          path: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
-          checker-logs-artifact-name: ${{ inputs.solution_name }}
+      # - name: check solution
+      #   uses: microsoft/powerplatform-actions/check-solution@v0
+      #   with:
+      #     environment-url: ${{ secrets.dev_url }}
+      #     app-id: ${{ secrets.dev_client_id }}
+      #     client-secret: ${{ secrets.dev_secrets_id }}
+      #     tenant-id: ${{ secrets.tenant_id }}
+      #     path: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
+      #     checker-logs-artifact-name: ${{ inputs.solution_name }}
 
-      - name: unpack solution
-        uses: microsoft/powerplatform-actions/unpack-solution@v0
-        with:
-          solution-file: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
-          solution-folder: ${{ inputs.solution_folder}}/${{ inputs.solution_name }}
-          solution-type: 'Unmanaged'
-          overwrite-files: true
+      # - name: unpack solution
+      #   uses: microsoft/powerplatform-actions/unpack-solution@v0
+      #   with:
+      #     solution-file: ${{ inputs.solution_exported_folder}}/${{ inputs.solution_name }}.zip
+      #     solution-folder: ${{ inputs.solution_folder}}/${{ inputs.solution_name }}
+      #     solution-type: 'Unmanaged'
+      #     overwrite-files: true
 
-      - name: update solution version
-        shell: pwsh
-        run: |
-          [xml]$XmlDocument = Get-Content -Path ${{ inputs.solution_folder}}/${{ inputs.solution_name }}/Other/Solution.xml
-          $OldVersion = $XmlDocument.GetElementsByTagName('Version')
-          [version]$Version = $OldVersion[0].'#text' 
-          [version]$NewVersion = "{0}.{1}.{2}.{3}" -f $Version.Major, $Version.Minor, ($Version.Build + 1), $Version.Revision
-          $OldVersion[0].'#text'  = $NewVersion.ToString()
-          $XmlDocument.Save('${{ inputs.solution_folder}}/${{ inputs.solution_name }}/Other/Solution.xml')
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      # - name: update solution version
+      #   shell: pwsh
+      #   run: |
+      #     [xml]$XmlDocument = Get-Content -Path ${{ inputs.solution_folder}}/${{ inputs.solution_name }}/Other/Solution.xml
+      #     $OldVersion = $XmlDocument.GetElementsByTagName('Version')
+      #     [version]$Version = $OldVersion[0].'#text' 
+      #     [version]$NewVersion = "{0}.{1}.{2}.{3}" -f $Version.Major, $Version.Minor, ($Version.Build + 1), $Version.Revision
+      #     $OldVersion[0].'#text'  = $NewVersion.ToString()
+      #     $XmlDocument.Save('${{ inputs.solution_folder}}/${{ inputs.solution_name }}/Other/Solution.xml')
+      #   env:
+      #     GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-      - name: branch solution
-        uses: microsoft/powerplatform-actions/branch-solution@v0
-        with:
-          solution-folder: ${{ inputs.solution_folder}}/${{ inputs.solution_name }}
-          solution-target-folder: ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          allow-empty-commit: true
-          branch-name: ${{ inputs.branch_name }}-${{ inputs.solution_name }}
+      # - name: branch solution
+      #   uses: microsoft/powerplatform-actions/branch-solution@v0
+      #   with:
+      #     solution-folder: ${{ inputs.solution_folder}}/${{ inputs.solution_name }}
+      #     solution-target-folder: ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}
+      #     repo-token: ${{ secrets.GITHUB_TOKEN }}
+      #     allow-empty-commit: true
+      #     branch-name: ${{ inputs.branch_name }}-${{ inputs.solution_name }}
 
-      - name: fetch develop branch
-        run: |
-          git --version
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-          git config --system core.longpaths true
-          git fetch --no-tags --prune --depth=1 origin
-          git checkout ${{ inputs.branch_name }}-${{ inputs.solution_name }}
-          git pull origin develop --allow-unrelated-histories --strategy-option ours
-          git commit -m "Merge with develop branch"
-          git push
+      # - name: fetch develop branch
+      #   run: |
+      #     git --version
+      #     git config user.name "GitHub Actions Bot"
+      #     git config user.email "<>"
+      #     git config --system core.longpaths true
+      #     git fetch --no-tags --prune --depth=1 origin
+      #     git checkout ${{ inputs.branch_name }}-${{ inputs.solution_name }}
+      #     git pull origin develop --allow-unrelated-histories --strategy-option ours
+      #     git commit -m "Merge with develop branch"
+      #     git push
 
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   env:
+      #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: create pull request
-        run: |
-          gh pr create -B develop -H ${{ inputs.branch_name }}-${{ inputs.solution_name }} --title 'Merge ${{ inputs.branch_name }} into develop' --body 'Created by Github action'
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: create pull request
+      #   run: |
+      #     gh pr create -B develop -H ${{ inputs.branch_name }}-${{ inputs.solution_name }} --title 'Merge ${{ inputs.branch_name }} into develop' --body 'Created by Github action'
+      #   env:
+      #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: merge pull requests
-        run: |          
-          gh pr merge --admin --merge ${{ inputs.branch_name }}-${{ inputs.solution_name }}
-        env:
-            GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      # - name: merge pull requests
+      #   run: |          
+      #     gh pr merge --admin --merge ${{ inputs.branch_name }}-${{ inputs.solution_name }}
+      #   env:
+      #       GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
             
-      - name: download check-solution logs
-        uses: actions/download-artifact@v2
-        with:
-          name: ${{ inputs.solution_name }}
-          path: logs/${{ inputs.solution_name }}
+      # - name: download check-solution logs
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: ${{ inputs.solution_name }}
+      #     path: logs/${{ inputs.solution_name }}
           
-      - name: push check-solution logs to branch
-        run: |
-          git --version
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-          git fetch --no-tags --prune --depth=1 origin
-          git checkout develop
-          mkdir ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
-          copy logs/${{ inputs.solution_name }} ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
-          git add logs
-          git pull origin
-          git commit -m "Added Logs to branch"
-          git push
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      # - name: push check-solution logs to branch
+      #   run: |
+      #     git --version
+      #     git config user.name "GitHub Actions Bot"
+      #     git config user.email "<>"
+      #     git fetch --no-tags --prune --depth=1 origin
+      #     git checkout develop
+      #     mkdir ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
+      #     copy logs/${{ inputs.solution_name }} ${{ inputs.solution_target_folder}}/${{ inputs.solution_name }}/logs
+      #     git add logs
+      #     git pull origin
+      #     git commit -m "Added Logs to branch"
+      #     git push
+      #   env:
+      #     GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-      - name: Display structure of downloaded files
-        run: ls -R
+      # - name: Display structure of downloaded files
+      #   run: ls -R
       
         
          
