--- a/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
@@ -67,44 +67,44 @@ jobs:
         lfs: true
         ref: ${{ inputs.branch_name }}-${{ inputs.solution_name }}
 
-    - name: pack solution
-      uses: microsoft/powerplatform-actions/pack-solution@v0
-      with:
-        solution-folder: ${{ inputs.solution_source_folder}}/${{ inputs.solution_name }}
-        solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
-        solution-type: Unmanaged
+    # - name: pack solution
+    #   uses: microsoft/powerplatform-actions/pack-solution@v0
+    #   with:
+    #     solution-folder: ${{ inputs.solution_source_folder}}/${{ inputs.solution_name }}
+    #     solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
+    #     solution-type: Unmanaged
         
-    - name: Import solution as unmanaged to build env
-      uses: microsoft/powerplatform-actions/import-solution@v0
-      with:
-        environment-url: ${{ secrets.build_url }}
-        app-id: ${{ secrets.build_client_id }}
-        client-secret: ${{ secrets.build_secrets_id }}
-        tenant-id: ${{ secrets.tenant_id }}
-        solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
-        force-overwrite: true
-        publish-changes: true
+    # - name: Import solution as unmanaged to build env
+    #   uses: microsoft/powerplatform-actions/import-solution@v0
+    #   with:
+    #     environment-url: ${{ secrets.build_url }}
+    #     app-id: ${{ secrets.build_client_id }}
+    #     client-secret: ${{ secrets.build_secrets_id }}
+    #     tenant-id: ${{ secrets.tenant_id }}
+    #     solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
+    #     force-overwrite: true
+    #     publish-changes: true
 
-    - name: export solution as managed from buid env
-      uses: microsoft/powerplatform-actions/export-solution@v0
-      with:
-        environment-url: ${{ secrets.build_url }}
-        app-id: ${{ secrets.build_client_id }}
-        client-secret: ${{ secrets.build_secrets_id }}
-        tenant-id: ${{ secrets.tenant_id }}
-        solution-name: ${{ inputs.solution_name }}
-        managed: true
-        solution-output-file: ${{ inputs.solution_shipping_folder}}/${{ inputs.solution_name }}.zip
+    # - name: export solution as managed from buid env
+    #   uses: microsoft/powerplatform-actions/export-solution@v0
+    #   with:
+    #     environment-url: ${{ secrets.build_url }}
+    #     app-id: ${{ secrets.build_client_id }}
+    #     client-secret: ${{ secrets.build_secrets_id }}
+    #     tenant-id: ${{ secrets.tenant_id }}
+    #     solution-name: ${{ inputs.solution_name }}
+    #     managed: true
+    #     solution-output-file: ${{ inputs.solution_shipping_folder}}/${{ inputs.solution_name }}.zip
         
-    - name: Delete branch
-      uses: dawidd6/action-delete-branch@v3
-      with:
-        github_token: ${{github.token}}
-        branches: ${{ inputs.branch_name }}-${{ inputs.solution_name }}
+    # - name: Delete branch
+    #   uses: dawidd6/action-delete-branch@v3
+    #   with:
+    #     github_token: ${{github.token}}
+    #     branches: ${{ inputs.branch_name }}-${{ inputs.solution_name }}
 
-    - name: Upload the ready to ship solution to GH artifact store
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{ inputs.solution_name }}
-        path: ${{ inputs.solution_shipping_folder}}/${{ inputs.solution_name }}_managed.zip
+    # - name: Upload the ready to ship solution to GH artifact store
+    #   uses: actions/upload-artifact@v2
+    #   with:
+    #     name: ${{ inputs.solution_name }}
+    #     path: ${{ inputs.solution_shipping_folder}}/${{ inputs.solution_name }}_managed.zip
 
