--- a/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_sit_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_sit_env.yml
@@ -48,20 +48,20 @@ jobs:
       with:
         lfs: true
 
-    - name: Fetch the ready to ship solution from GH artifact store
-      uses: actions/download-artifact@v2
-      with:
-        name: ${{ inputs.solution_name }}
-        path: ${{ inputs.solution_release_folder}}
+    # - name: Fetch the ready to ship solution from GH artifact store
+    #   uses: actions/download-artifact@v2
+    #   with:
+    #     name: ${{ inputs.solution_name }}
+    #     path: ${{ inputs.solution_release_folder}}
         
-    - name: Import solution to sit env
-      uses: microsoft/powerplatform-actions/import-solution@v0
-      with:
-        environment-url: ${{ secrets.sit_url }}
-        app-id: ${{ secrets.sit_client_id }}
-        client-secret: ${{ secrets.sit_secrets_id }}
-        tenant-id: ${{ secrets.tenant_id }}
-        solution-name: ${{ inputs.solution_name }}
-        solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
-        force-overwrite: true
-        publish-changes: true
+    # - name: Import solution to sit env
+    #   uses: microsoft/powerplatform-actions/import-solution@v0
+    #   with:
+    #     environment-url: ${{ secrets.sit_url }}
+    #     app-id: ${{ secrets.sit_client_id }}
+    #     client-secret: ${{ secrets.sit_secrets_id }}
+    #     tenant-id: ${{ secrets.tenant_id }}
+    #     solution-name: ${{ inputs.solution_name }}
+    #     solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
+    #     force-overwrite: true
+    #     publish-changes: true
