--- a/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
@@ -46,7 +46,7 @@ on:
 
 jobs:
   export-from-dev:
-    environment: dev    
+    # environment: dev    
     runs-on: windows-latest
     env:
       RUNNER_DEBUG: 1
