--- a/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_build_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_build_env.yml
@@ -2,6 +2,11 @@ name: eql_cmx_portal_cicd_transport_portal_data_pipeline_to_build_env.yml
 
 on:
   workflow_call :
+    inputs:
+      portal_name:
+        description: 'name of the portal'
+        required: true
+        type: string
     secrets:
       dev_url:
         description: 'portal_data environment url.'
@@ -95,5 +100,5 @@ jobs:
         app-id: ${{ secrets.build_client_id }}
         client-secret: ${{ secrets.build_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        upload-path: portaldata/eql-trial-portal---acntrialportal
+        upload-path: portaldata/${{ inputs.portal_name }}
         
