--- a/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
@@ -97,10 +97,10 @@ jobs:
         solution-output-file: ${{ inputs.solution_shipping_folder}}/${{ inputs.solution_name }}.zip
         
     - name: Delete branch
-      uses: dawidd6/action-delete-branch@v3
-      with:
-        github_token: ${{github.token}}
-        branches: ${{ inputs.branch_name }}-${{ inputs.solution_name }}
+      run: |
+        gh pr close {${{ inputs.branch_name }}-${{ inputs.solution_name }}} -d
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload the ready to ship solution to GH artifact store
       uses: actions/upload-artifact@v2
