--- a/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_build_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_build_env.yml
@@ -101,4 +101,5 @@ jobs:
         client-secret: ${{ secrets.build_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
         upload-path: portaldata/${{ inputs.portal_name }}
+        deployment-profile: CMX-Pipeline/eql_cmx_portal_cicd_repository_/deployment-profiles/portal-name/build.deployment.yml
         
