--- a/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_build_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_build_env.yml
@@ -54,7 +54,16 @@ jobs:
         download-path: portaldata
         website-id: 'b3cb3b78-405f-ed11-9561-000d3a34c578'
         overwrite: true
-        
+
+    - name: copy deployment profile to portaldata folder
+      run: |
+          ls -d */
+          mkdir portaldata/${{ inputs.portal_name }}/deployment-profiles
+          cp -R deployment-profiles portaldata/${{ inputs.portal_name }}/deployment-profiles
+      env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+
     - name: push portal data to branch
       run: |
           ls -d */
