--- a/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_build_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_transport_portal_data_pipeline_to_build_env.yml
@@ -58,7 +58,7 @@ jobs:
     - name: copy deployment profile to portaldata folder
       run: |
           ls -d */
-          mkdir portaldata/${{ inputs.portal_name }}/deployment-profiles
+          mkdir -p portaldata/${{ inputs.portal_name }}/deployment-profiles
           cp -R deployment-profiles/portal-name/build.deployment.yml portaldata/${{ inputs.portal_name }}/deployment-profiles
       env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
