--- a/deployment-profiles/portal-name/build.deployment.yml
+++ b/deployment-profiles/portal-name/build.deployment.yml
@@ -1,4 +1,4 @@
 adx_website:
-    - adx_websiteid: Test Name
-    - adx_value: TestValue
+    - adx_websiteid: 5001a9ef-2555-ed11-bba2-000d3a34c578
     - adx_name: EQL Trial Portal - acntrialportal
+    - adx_value: TestValue
