--- a/portaldata/eql-trial-portal---acntrialportal/deployment-profiles/build.deployment.yml
+++ b/portaldata/eql-trial-portal---acntrialportal/deployment-profiles/build.deployment.yml
@@ -1,4 +1,3 @@
 adx_website:
     - adx_websiteid: 5001a9ef-2555-ed11-bba2-000d3a34c578
-    - adx_name: EQL Trial Portal - acntrialportal
-    - adx_value: TestValue
+    - adx_name: TestValue
