--- a/deployment-profiles/portal-name/build.deployment.yml
+++ b/deployment-profiles/portal-name/build.deployment.yml
@@ -1,4 +1,7 @@
 adx_website:
     - adx_websiteid: 5001a9ef-2555-ed11-bba2-000d3a34c578
-      adx_name: EQL Trial Portal - acntrialportal
-      adx_value: TestValue
+      adx_name: TestValue
+adx_websitebinding:
+    - adx_websitebindingid: 0546c82a-2655-ed11-bba2-000d3a34c578
+      adx_sitename: acntrialportaltest.powerappsportals.com
+      adx_name: 'Binding: acntrialportal.powerappsportals.com'
