--- a/deployment-profiles/portal-name/build.deployment.yml
+++ b/deployment-profiles/portal-name/build.deployment.yml
@@ -2,3 +2,7 @@ adx_website:
     - adx_websiteid: 5001a9ef-2555-ed11-bba2-000d3a34c578
       adx_name: EQL Trial Portal - acntrialportal
       adx_primarydomainname: acntrialportal1.powerappsportals.com
+adx_websitebinding:
+    - adx_name: 'Binding: acntrialportal1.powerappsportals.com'
+      adx_sitename: acntrialportal1.powerappsportals.com
+      adx_websitebindingid: 0546c82a-2655-ed11-bba2-000d3a34c578
