--- a/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
@@ -122,9 +122,8 @@ jobs:
           git config --system core.longpaths true
           git fetch --no-tags --prune --depth=1 origin
           git checkout ${{ inputs.branch_name }}-${{ inputs.solution_name }}
-          git pull origin develop --allow-unrelated-histories --strategy-option ours
           git commit -m "Merge with develop branch"
-          git push
+          git push --force
 
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
