--- a/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
@@ -112,6 +112,7 @@ jobs:
           git config user.email "<>"
           git config --system core.longpaths true
           git fetch --no-tags --prune --depth=1 origin
+          git checkout develop
           cd ${{ inputs.solution_folder}}
           rm -r ${{ inputs.solution_name }}
           git commit -m "Deleted Folder ${{ inputs.solution_name }} in preparation for branch solution task"
