Added clean up functionality

--- a/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
@@ -117,6 +117,7 @@ jobs:
           rm -r ${{ inputs.solution_name }}
           git commit -m "Deleted Folder ${{ inputs.solution_name }} in preparation for branch solution task"
           git push --force
+          git checkout main
 
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
