--- a/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
@@ -60,6 +60,19 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Delete Solutions folder in develop branch
+        run: |
+          git --version
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git config --system core.longpaths true
+          git fetch --no-tags --prune --depth=1 origin
+          git checkout develop
+          cd ${{ inputs.solution_folder}}
+          rm -r ${{ inputs.solution_name }}
+          git commit -m "Deleted Folder ${{ inputs.solution_name }} in preparation for branch solution task"
+          git push --force
+          git checkout main
 
       - uses: actions/checkout@v3
         with:
@@ -105,19 +118,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-      - name: fetch develop branch
-        run: |
-          git --version
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-          git config --system core.longpaths true
-          git fetch --no-tags --prune --depth=1 origin
-          git checkout develop
-          cd ${{ inputs.solution_folder}}
-          rm -r ${{ inputs.solution_name }}
-          git commit -m "Deleted Folder ${{ inputs.solution_name }} in preparation for branch solution task"
-          git push --force
-          git checkout main
+
 
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
