Added clean up functionality

--- a/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_export_from_dev_pipeline.yml
@@ -66,6 +66,7 @@ jobs:
           lfs: true
 
       - name: clean up develop branch
+        shell: bash
         run: |
           git --version
           git config user.name "GitHub Actions Bot"
